--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -629,10 +629,168 @@
 
     <string-array name="tension_pro_benchmarks">
         <item>5C Benchmark</item>
-        <item>Four finger grip only</item>
-        <item>4,1,10,0,3,50,120</item>
-        <item>6,2,2,2,6,4,4,4</item>
-        <item>1,1,1,1,1,1,1,1</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>4,4,2,8,8,2,1,5,5,1,1,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,50,120</item>
+        <item>4,11,11,4,8,5,5,8,1,8,8,1,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,45,120</item>
+        <item>8,11,11,8,11,5,5,11,1,8,8,1,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>11,5,5,11,5,5,4,11,11,4,4,8,8,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>11,5,5,11,5,5,4,5,5,4,4,11,11,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>5,9,9,5,9,9,8,5,5,8,5,8,8,5</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>11,10,10,11,9,9,8,5,5,8,5,8,8,5</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>9,10,10,9,5,10,10,5,5,5,8,9,9,8,11,5,5,11,4,7,7,4,7,7</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>9,10,10,9,8,3,3,8,5,5,8,9,9,8,11,5,5,11,4,7,7,4,7,7</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5,5,5,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,35,80</item>
+        <item>10,10,9,3,3,9,9,9,5,9,9,5,4,7,7,4,8,7,7,8</item>
+        <item>1,1,1,1,1,1,2,2,3,3,3,3,4,4,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,30,80</item>
+        <item>10,10,9,3,3,9,11,10,10,11,9,9,4,7,7,4,8,7,7,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,4,4,4,4,5,5,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>10,3,3,10,3,3,9,10,10,9,9,9,7,7,5,5,4,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>8A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,30,60</item>
+        <item>3,3,10,10,5,3,3,5,10,10,11,3,3,11,5,8,8,5,5,5,7,8,8,7</item>
+        <item>1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,6,6,6,6</item>
+
+
+        <item>5B Benchmark</item>
+        <item>Grips &amp; Grades test,Four fingers only</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,8,2,4,4,1</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>4,6,7,3,2,150,300</item>
+        <item>2,8,4,8,2,5,1,4</item>
+        <item>1,1,1,1,1,1,2,2</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>4,6,7,3,2,140,300</item>
+        <item>2,8,4,8,4,5,1,8</item>
+        <item>1,1,1,1,1,1,2,2</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>4,11,8,5,8,11,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>4,11,8,5,5,11,4,8,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>5,5,8,9,11,9,4,11,4,8</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>4,10,5,9,11,9,4,5,4,11</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>8,10,9,9,11,5,5,8,8,5</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>11,10,9,9,8,5,5,11,8,5</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>9,10,5,10,9,4,5,5,7,4</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>9,10,5,10,9,8,5,5,7,7</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>10,10,11,3,5,9,5,9,4,7,7,8</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>10,10,5,3,9,9,5,9,4,7,7,8</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>8A Benchmark</item>
+        <item>Grips &amp; Grades test. Finally we use that mono</item>
+        <item>12,6,7,3,1,90,1</item>
+        <item>9,3,10,3,3,3,9,9,5,10,9,9,11,10,7,7,4,5,8,11,7,4,6,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,8,8</item>
+
     </string-array>
 
     <string-array name="zlag_benchmarks">
