--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -806,7 +806,7 @@
         <item>Grips &amp; Grades test</item>
         <item>8,1,10,0,3,50,120</item>
         <item>4,6,6,4,4,4,4,11,11,4,4,4,4,6,6,4</item>
-        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,3,3,3,3</item>
 
         <item>6A+ Benchmark</item>
         <item>Grips &amp; Grades test</item>
@@ -875,7 +875,7 @@
         <item>1,1,2,2,2,2,3,3,4,4,4,4,5,5,6,6,7,7,8,8,8,8</item>
 
 
-        <item>5B Benchmark</item>
+        <item>5C Benchmark</item>
         <item>Only jugs</item>
         <item>3,6,7,3,3,150,300</item>
         <item>1,1,1,6,1,4</item>
@@ -977,11 +977,168 @@
     </string-array>
 
     <string-array name="meto_benchmarks">
-        <item>no programs</item>
+        <item>5C Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>6,6,7,3,150,360</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>7,7,3,3,15,9,9,15,15,7,7,15</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>2,2,7,5,5,7,7,7,7,16,16,7,15,7,7,15</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>2,2,7,6,6,7,9,16,16,9,15,7,7,15,7,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,100</item>
+        <item>5,5,2,6,6,2,17,7,7,17,7,7,16,9,9,16</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>5,5,5,6,6,5,17,4,4,17,17,7,7,17,7,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>6,6,2,11,11,2,4,17,17,4,4,4,7,10,10,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>6,11,11,6,5,17,17,5,4,4,7,10,10,7,12,12</item>
+        <item>1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>6,11,11,6,11,11,17,6,6,17,4,5,5,4,5,17,17,5,12,12,12,18,18,12</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>11,11,11,11,17,6,6,17,5,5,4,5,5,4,5,17,17,5,12,12,12,18,18,12</item>
+        <item>1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,35,80</item>
+        <item>11,11,8,5,5,8,6,6,5,6,6,5,12,18,18,12,13,18,18,13</item>
+        <item>1,1,2,2,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>11,1,10,0,3,30,80</item>
+        <item>6,10,10,6,8,5,5,8,6,6,5,6,6,5,12,18,18,12,13,18,18,13</item>
+        <item>2,2,2,2,2,2,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,2,30,60</item>
+        <item>11,10,10,11,11,5,5,11,8,6,6,8,8,8,13,18,18,13,13,13</item>
+        <item>2,2,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,2,30,60</item>
+        <item>11,8,8,11,11,11,8,8,11,8,8,11,13,18,18,13,13,13,12,12</item>
+        <item>2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,6,6</item>
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,3,14,7,7,7</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>7,7,7,2,3,3,15,7,15,7</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>7,3,7,2,3,3,15,7,15,9</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>2,2,3,5,7,6,9,9,16,7</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>2,5,3,5,7,6,9,17,4,7</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>5,5,2,6,16,4,9,17,9,9</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>5,6,2,6,9,17,16,4,9,9</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>6,6,5,11,4,4,5,9,17,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>6,11,5,11,5,9,4,4,17,4</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7B Benchmark</item>
+        <item>Intro to pockets</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>11,11,10,10,8,17,4,6,12,12</item>
+        <item>1,1,2,2,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Intro to pockets</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>11,11,6,10,8,17,4,6,12,12</item>
+        <item>1,1,2,2,3,3,3,3,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>6,6,10,11,6,5,4,11,12,12,12,13</item>
+        <item>2,2,2,2,3,3,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>8,8,6,11,6,6,12,13,13,18,12,12</item>
+        <item>2,2,2,2,3,3,4,4,5,5,6,6</item>
+
+
+
     </string-array>
 
     <string-array name="rockprodigy_benchmarks">
