--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,7 +123,7 @@
 
         <item>5B Benchmark</item>
         <item>Only four finger grip</item>
-        <item>3,6,7,3,3,150,300</item>
+        <item>3,6,7,3,2,150,300</item>
         <item>6,6,3,3,3,6</item>
         <item>1,1,1,1,1,1</item>
 
@@ -194,7 +194,7 @@
         <item>1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7C Benchmark</item>
-        <item>Six main grip types tested, intro to two back finger grip</item>
+        <item>Grips &amp; Grades test. Six main grip types tested, intro to two back finger grip</item>
         <item>6,6,7,3,2,100,180</item>
         <item>2,2,10,4,10,4,11,11,5,5,7,7</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
@@ -546,9 +546,9 @@
         <item>8,8,8,8,8,8,8,8,4,4,4,5,5,4,6,2,2,6</item>
         <item>2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,6,6</item>
 
-        <item>5B Benchmark</item>
-        <item>Four fingers only</item>
-        <item>3,6,7,3,3,150,300</item>
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,2,150,300</item>
         <item>2,6,1,1,1,6</item>
         <item>1,1,1,1,1,1</item>
 
@@ -707,9 +707,9 @@
         <item>1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,6,6,6,6</item>
 
 
-        <item>5B Benchmark</item>
+        <item>5C Benchmark</item>
         <item>Grips &amp; Grades test,Four fingers only</item>
-        <item>3,6,7,3,3,150,300</item>
+        <item>3,6,7,3,2,150,300</item>
         <item>1,8,2,4,4,1</item>
         <item>1,1,1,1,1,1</item>
 
@@ -863,13 +863,13 @@
         <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
 
         <item>7C Benchmark</item>
-        <item>Make sure middle finger is strong</item>
-        <item>10,1,10,0,2,30,60</item>
+        <item>Grips &amp; Grades test. Make sure middle finger is strong</item>
+        <item>10,1,10,0,3,30,60</item>
         <item>12,12,2,12,12,2,15,12,12,15,9,14,14,9,14,14,9,9,13,13</item>
         <item>1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,6,6,8,8</item>
 
         <item>8A Benchmark</item>
-        <item>Index and middle finger get to work</item>
+        <item>Grips &amp; Grades test. Index and middle finger get to work</item>
         <item>11,1,10,0,3,30,60</item>
         <item>12,12,2,2,12,12,12,12,9,14,14,9,14,14,9,9,13,13,13,8,8,13</item>
         <item>1,1,2,2,2,2,3,3,4,4,4,4,5,5,6,6,7,7,8,8,8,8</item>
@@ -877,7 +877,7 @@
 
         <item>5C Benchmark</item>
         <item>Only jugs</item>
-        <item>3,6,7,3,3,150,300</item>
+        <item>3,6,7,3,2,150,300</item>
         <item>1,1,1,6,1,4</item>
         <item>1,1,1,1,1,1</item>
 
@@ -1047,20 +1047,20 @@
 
         <item>7C Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>10,1,10,0,2,30,60</item>
+        <item>10,1,10,0,3,30,60</item>
         <item>11,10,10,11,11,5,5,11,8,6,6,8,8,8,13,18,18,13,13,13</item>
         <item>2,2,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
 
         <item>7C+ Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>10,1,10,0,2,30,60</item>
+        <item>10,1,10,0,3,30,60</item>
         <item>11,8,8,11,11,11,8,8,11,8,8,11,13,18,18,13,13,13,12,12</item>
         <item>2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,6,6</item>
 
 
         <item>5C Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>3,6,7,3,3,150,300</item>
+        <item>3,6,7,3,2,150,300</item>
         <item>1,3,14,7,7,7</item>
         <item>1,1,1,1,1,1</item>
 
@@ -1176,11 +1176,171 @@
     </string-array>
 
     <string-array name="meto_wood_deluxe_benchmarks">
-        <item>no programs</item>
+        <item>5C Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>6,6,7,3,150,360</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>1,1,1,3,3,1,4,7,7,4,4,4</item>
         <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>4,4,3,7,7,3,11,4,4,11,5,7,7,5,5,5</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>3,7,7,3,11,4,4,11,5,7,7,5,5,7,7,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,100</item>
+        <item>11,2,2,11,3,3,4,4,9,5,5,9,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>11,2,2,11,3,8,8,3,9,5,5,9,4,7,7,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,2,3,8,8,3,11,5,5,11,7,9,9,7,6,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,2,2,8,8,2,11,4,4,11,7,9,9,7,6,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>13,1,10,0,2,40,80</item>
+        <item>12,11,11,12,15,8,8,15,8,8,9,9,4,13,13,4,7,13,13,7,6,6,6,10,10,6</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>13,1,10,0,2,35,80</item>
+        <item>12,2,2,12,15,8,8,15,8,8,9,9,4,13,13,4,4,13,13,4,6,6,6,10,10,6</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,35,80</item>
+        <item>12,8,8,12,12,12,13,13,9,13,13,9,6,10,10,6,6,14,14,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3,3,3,4,4,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,30,80</item>
+        <item>12,8,8,12,12,12,13,15,15,13,13,13,6,10,10,6,6,14,14,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,4,4,4,4,5,5,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,30,60</item>
+        <item>12,12,13,3,3,13,13,13,15,9,9,15,10,10,10,14,14,10,6,6</item>
+        <item>1,1,2,2,2,2,3,3,3,3,3,3,4,4,5,5,5,5,6,6</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,30,60</item>
+        <item>12,12,13,8,8,13,15,8,8,15,8,9,9,8,10,10,14,14,6,6</item>
+        <item>1,1,2,2,2,2,2,2,2,2,3,3,3,3,4,4,5,5,6,6</item>
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,2,150,300</item>
+        <item>1,3,1,7,1,4</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>1,3,1,7,4,7,4,4,7,3</item>
+        <item>1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>1,2,1,11,4,7,4,4,7,3</item>
+        <item>1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>4,11,4,3,3,3,5,7,5,5</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>4,11,4,2,3,3,4,5,5,7</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>8,11,3,2,2,11,4,4,5,5</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>8,11,3,2,2,11,4,9,5,7</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>8,15,2,2,15,3,5,11,5,9</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>11,12,2,3,8,8,5,11,5,9</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>12,15,2,15,9,11,9,9,6,6</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>12,15,2,12,9,11,9,11,6,10</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>12,12,13,9,13,9,6,10,10,10,6,6</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>12,12,13,11,15,9,10,10,10,14,6,6</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>8A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>11,6,7,3,1,90,180</item>
+        <item>12,12,8,12,13,13,9,12,13,13,10,10,10,14,14,10,14,14,6,6,6,10</item>
+        <item>1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
+
     </string-array>
 
     <string-array name="drcc_benchmarks">
@@ -1268,8 +1428,8 @@
 
 
         <item>7C Benchmark</item>
-        <item>Intro to two front grip</item>
-        <item>10,1,10,0,2,30,60</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,30,60</item>
         <item>12,12,9,9,10,9,9,10,10,10,8,9,9,8,9,9,4,4,5,5</item>
         <item>1,1,2,2,2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5</item>
 
@@ -1433,9 +1593,9 @@
 
 
 
-        <item>5B Benchmark</item>
+        <item>5C Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>3,6,7,3,3,150,300</item>
+        <item>3,6,7,3,2,150,300</item>
         <item>6,6,2,5,5,6</item>
         <item>1,1,1,1,1,1</item>
 
